# self-optimizing-research-agent

./: .env.example  .gitignore  README.md  pyproject.toml  uv.toml
data/: README.md  sample.jsonl
data/raw/: query_candidates.jsonl.progress  sources_index.jsonl
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: TestPanel.jsx  TrainPanel.jsx
scripts/: optimize.py
scripts/dataset/: 01_fetch_queries.py  02_download_sources.py  03_extract_related_work.py  04_resolve_citations.py  arxiv_api.py  common.py  latex_extract.py  s2_api.py
src/research_agent/: __init__.py  agent.py  cli.py  config.py  data.py  metrics.py  registry.py  signatures.py
src/research_agent/server/: __init__.py  app.py  jobs.py
tests/: test_data.py  test_metrics.py
