[project]
name = "self-optimizing-research-agent"
version = "0.1.0"
description = "A DSPy-based self-optimizing research agent for related work generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=2.6.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]
server = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]
dataset = [
    "requests>=2.31.0",
    "bibtexparser>=1.4.0,<2",
]

[project.scripts]
research-agent-server = "research_agent.server.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
